# CatchemAlphaZero

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  temp.py
.github/workflows/: python-app.yml
Notebooks/: 01 MCTS Demo.ipynb  02 Convolutional Layers.ipynb  03 Alpha Zero.ipynb  04 Chess.ipynb  AlphaZero Doodles.ipynb  CNN and ResNets.ipynb  Chess.ipynb  How Perceptrons Work.ipynb  Investigations.ipynb  MCTS Demo.ipynb  Network Visualizer.ipynb  Sumplete Doodles.ipynb  connectx.ipynb  graph  labelled_data.csv
src/: cli.py
src/caz/: __main__.py  app.py  async_utils.py  cli.py  graph.py
src/caz/alpha_zero/: alpha_zero.py  alpha_zero_mcts.py  alpha_zero_parameters.py  alpha_zero_training_models.py  network_torch.py  retrainer.py
src/caz/games/: game.py
src/caz/mnist/: mnist_loader.py  mnist_mlp.py
src/caz/solvers/: mcts.py  solver.py
src/caz/states/: __init__.py  chess.py  chess_enums.py  connectx.py  tictactoe.py
src/caz/views/: __init__.py  chess_detail.py  chess_main.py  console.py
src/pypad/: UCT.py  __main__.py  agent_type.py  app.py  bitboard_utils.py  cli.py  connectx.py  controller.py  factory.py  game_state.py  kaggle_sandbox.py  kaggle_types.py  mcts.py  mcts_az.py  mnist_mlp.py  mnist_pytorch_loader.py  mnist_svm.py  mnist_torch.py  mypy_check.py  neural_net.py  solver.py  state.py  sumplete_solver.py  sumplete_solver2.py  throwaway.py
tests/: chess_games.py  test_chess.py
tutorials/: 01 MCTS Demo.ipynb  02 Convolutional Layers.ipynb  03 Alpha Zero.ipynb  04 Chess.ipynb
(+49 files in other folders)
