[metadata]
name = catchem-alpha-zero
version = 0.0.3
author = Alex Cross
author_email = AlexJCross90@gmail.com
description = CatchemAlphaZero: AI techniques for solving games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CatchemAL/CatchemAlphaZero
project_urls =
    Bug Tracker = https://github.com/CatchemAL/CatchemAlphaZero/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src
install_requires =
    numpy
    torch
    torchvision
    tensorboard
    matplotlib
    ipywidgets
    jupyterlab
    nest-asyncio
    tqdm
    chess
    graphviz
    kaggle-environments

[options.packages.find]
where = src

[options.package_data]
caz.images =
    *.png
    *.jpg
    *.ico
    

[options.entry_points]
console_scripts = 
    caz = caz.cli:main

gui_scripts =
    alpha = caz.app:launch

[options.extras_require]
dev = 
    black
    flake8
    isort
    mypy
    pytest

[flake8]
ignore =
    E203
    W503
per-file-ignores = __init__.py:F401
extend-exclude = .venv/*.py,.tox/*.py,tests/*.py
filename = ./src/*.py
max-line-length = 105
